@@ -13,6 +13,12 @@ Note: This file contains only changes in the 'default' branch.
     created under experiments (src/experiments/fetch-missing-prices.py) which
     you should be able to modify to your favourite price fetcher.
 
+  - The 'export_holdings' report now exports an extra holding as a cash
+    equivalent mutual fund in order to take into account of the value of
+    holdings that could not be converted to symbols the online portfolio
+    manager software knows about. The cash position brings the portfolio to
+    close to its total value.
+
 
 2014-12-26
 
